[gd_scene load_steps=9 format=3 uid="uid://wfnpdlgrmtni"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_3q3ol"]
[ext_resource type="LabelSettings" uid="uid://bhpxsfcxegng2" path="res://assets/new_label_settings.tres" id="2_6i8e4"]
[ext_resource type="FontFile" uid="uid://bpo08sdyanq62" path="res://assets/Bonus/kenvector_future.ttf" id="2_sox8d"]
[ext_resource type="Texture2D" uid="uid://blnx2gfj38605" path="res://assets/healthbar/healthbarUnder (1).png" id="3_je64p"]
[ext_resource type="Texture2D" uid="uid://kr0j0t0ogmtf" path="res://assets/healthbar/healthbarProgress (1).png" id="4_a2y4g"]
[ext_resource type="Texture2D" uid="uid://b787npi7ri7vm" path="res://assets/player_health/hearts/heart.png" id="5_3ow6s"]

[sub_resource type="LabelSettings" id="LabelSettings_38gff"]
font = ExtResource("2_sox8d")
font_size = 62
font_color = Color(0.858824, 0.827451, 0.976471, 1)
outline_size = 7
outline_color = Color(0.116137, 0.31109, 0.145875, 1)
shadow_size = 14
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_fjd2h"]
font = ExtResource("2_sox8d")
font_size = 31
font_color = Color(0.850147, 0.881499, 0.955056, 1)
outline_size = 7
outline_color = Color(0.847623, 0.190592, 0.640252, 1)
shadow_size = 14
shadow_offset = Vector2(10, 10)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3q3ol")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.854902, 0.886275, 0.427451, 1)
theme_override_font_sizes/font_size = 22
text = "Score: 0000"
label_settings = ExtResource("2_6i8e4")
uppercase = true

[node name="GameOverLabel" type="Label" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.894118, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "GAME OVER"
label_settings = SubResource("LabelSettings_38gff")
horizontal_alignment = 2

[node name="LevelOneComplete" type="Label" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Level One Complete!"
label_settings = SubResource("LabelSettings_fjd2h")

[node name="BossHealthBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 612.0
offset_top = 32.0
offset_right = 676.0
offset_bottom = 42.0
scale = Vector2(5, 5)
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
min_value = 100.0
value = 100.0
texture_under = ExtResource("3_je64p")
texture_progress = ExtResource("4_a2y4g")

[node name="Healthbar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FirstHeart" type="TextureRect" parent="CanvasLayer/Healthbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1060.0
offset_top = 1310.0
offset_right = 1560.0
offset_bottom = 1810.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_3ow6s")

[node name="SecondHeart" type="TextureRect" parent="CanvasLayer/Healthbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1285.0
offset_top = 1310.0
offset_right = 1785.0
offset_bottom = 1810.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_3ow6s")

[node name="ThirdHearth" type="TextureRect" parent="CanvasLayer/Healthbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1210.0
offset_top = 1310.0
offset_right = 1710.0
offset_bottom = 1810.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_3ow6s")

[node name="ForthHeart" type="TextureRect" parent="CanvasLayer/Healthbar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1135.0
offset_top = 1310.0
offset_right = 1635.0
offset_bottom = 1810.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_3ow6s")
